// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleMap component invokes APIs and renders correctly 1`] = `
<div
  class="GoogleMap"
>
  <div
    class="map"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`GoogleMap component invokes APIs and renders correctly 2`] = `
Array [
  Array [
    <div
      class="map"
    >
      <div
        class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </div>,
    Object {
      "center": Object {
        "lat": 63.990556,
        "lng": 12.3077779,
      },
      "fullscreenControl": false,
      "mapTypeControl": false,
      "rotateControl": false,
      "scaleControl": false,
      "streetViewControl": false,
      "zoom": 8,
      "zoomControl": true,
    },
  ],
]
`;

exports[`GoogleMap component loader renders correctly 1`] = `
<div
  class="GoogleMap"
>
  <div
    class="map"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</div>
`;
